<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_weight="2">

        <Button
            android:id="@+id/view_computer_board2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_computer_board"
            android:enabled="false"
            android:layout_weight="2"/>
        <Button
            android:id="@+id/view_player_board2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_player_board"
            android:layout_weight="2"/>
        <Button
            android:id="@+id/start_new_game"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_new_game"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_margin="10dp"
        android:layout_weight="2">

        <TextView
            android:id="@+id/winner_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/computer_winner"
            android:layout_weight="1"/>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/computer_wins_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/computer_wins"
                android:layout_weight="1" />
            <Space
                android:layout_height="wrap_content"
                android:layout_width="10dp"
                android:layout_weight="5"/>
            <TextView
                android:id="@+id/computer_wins_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/player_wins_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_wins"
                android:layout_weight="1" />
            <Space
                android:layout_height="wrap_content"
                android:layout_width="10dp"
                android:layout_weight="5"/>
            <TextView
                android:id="@+id/player_wins_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>